--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,21 @@
 
-# Created by https://www.gitignore.io/api/visualstudiocode
-# Edit at https://www.gitignore.io/?templates=visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/vscode,vuejs
+# Edit at https://www.toptal.com/developers/gitignore?templates=vscode,vuejs
 
-### VisualStudioCode ###
+### vscode ###
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+*.code-workspace
 
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-test/
-old/
-# End of https://www.gitignore.io/api/visualstudiocode
+### Vuejs ###
+# Recommended template: Node.gitignore
+
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
+
+# End of https://www.toptal.com/developers/gitignore/api/vscode,vuejs
