--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lzy3me.github.io",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.1",
+    "slick-carousel": "^1.8.1",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0"
   },
@@ -49,5 +50,10 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "license": "SEE LICENSE IN <LICENSE>",
+  "author": {
+    "name": "Fluke@lzy3me",
+    "url": "https://lzy3me.github.io/"
+  }
 }
