--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,7 @@ dist/
 npm-debug.log
 yarn-error.log
 
+# ! Very Important NOT TO COMMIT YOUR .env FILE if the file contian confidential data !
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/vscode,vuejs
